--- a/src/app/pages/consultas/create/create.component.html
+++ b/src/app/pages/consultas/create/create.component.html
@@ -278,13 +278,13 @@
                                 <label class="col-form-label">
                                     Retirar lotes
                                 </label>
-                                <form [formGroup]="formInsumos">
+                                <div [formGroup]="formInsumos">
                                     <div class="card shadow-none">
                                       <div class="card-body">
                                         <div class="form-group">
                                             <label class="col-form-label">
                                                 Inventario
-                                                <span class="text-danger">*</span>
+                                                <span class="text-danger">Opcional</span>
                                             </label>
                                             <ngx-select
                                                 [formControlName]="'inventario'"
@@ -295,6 +295,7 @@
                                                 placeholder="Select..."
                                                 (select)="getInsumosPorInventario(formInsumos.get('inventario')?.value)">
                                             </ngx-select>
+                                            
                                         </div>
                                         <div class="form-group" [hidden]="!formInsumos.get('insumosVisible')?.value">
                                             <label class="col-form-label">
@@ -314,13 +315,10 @@
                                             </ngx-select>
                                         </div>
                                         <div formArrayName="itemInsumo">
-                                            <!-- <label class="col-form-label">
-                                                Lotes
-                                                <span class="text-danger">*</span>
-                                            </label> -->
+                                   
                                             <div *ngFor="let insumoSeleccionado of insumosForm().controls; let insIndex=index">
                                                 <div class="mb-1" [formGroupName]="insIndex">
-                                                    <div formArrayName="lotes">
+                                                    <div>
                                                         <div>
                                                             <div class="list-group-item d-flex justify-content-between align-items-center">
                                                                 <p class="text-pink">
@@ -328,7 +326,7 @@
                                                                   </small></b></p>
                                                                 <div class="btn-group" role="group" aria-label="Basic example">
                                                                     <button type="button" class="btn btn-secondary" (click)="addItemLote(insIndex)">Agregar Lote +</button>
-                                                                    <!-- <button type="button" class="btn btn-secondary" (click)="removeLote(insIndex, insumoSeleccionado.value.id)">-</button> -->
+                                                                 
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -348,13 +346,14 @@
                                                                             [formControlName]="'lote'"
                                                                             [allowClear]="true"
                                                                             optionValueField="id"
-                                                                            optionTextField="nombre"
+                                                                            optionTextField="id"
                                                                             placeholder="Select..."
-                                                                            [items]="this.getLotesSelect(insumoSeleccionado.value.id)">
+                                                                            [items]="this.getLotesSelect(insumoSeleccionado.value.id)"
+                                                                            >
                                                                         </ngx-select>
                                                                     </td>
                                                                     <td width="30%">
-                                                                        <input type="number" class="form-control" formControlName="cantidad"/>
+                                                                        <input type="number" class="form-control" formControlName="cantidad" (focusout)="onFocusOutCantidad(insIndex, insumoSeleccionado, loteIndex)"/>
                                                                     </td>
                                                                     <td width="10px">
                                                                         <button type="button" class="btn-close d-flex align-items-center mt-2" (click)="removeItemLote(insIndex,loteIndex)">
@@ -370,7 +369,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                </form>
+                                </div>
                             </div>
 
                             <div class="form-group">
