--- a/src/app/pages/consultas/show/show.component.html
+++ b/src/app/pages/consultas/show/show.component.html
@@ -238,13 +238,14 @@
                             </div>
                         </div>
                     </ng-container>
-                    <!-- <div class="form-group">
+                    <div class="form-group">
                         <label class="col-form-label">
                             Receta
                         </label>
+                        <button class="btn btn-white" (click)="abrirReceta(consulta?.id)"><i class="fas fa-download"></i></button>
                         <div class="border rounded p-2" [innerHtml]='consulta?.receta'>
                         </div>
-                    </div> -->
+                    </div>
                 </div>
         </div>
     </div>
