--- a/src/app/pages/lotes-medicos/show/show.component.html
+++ b/src/app/pages/lotes-medicos/show/show.component.html
@@ -135,11 +135,7 @@
                         <div class="card shadow-none">
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="form-group col-6 col-md-4">
-                                        <label>Folio de entrada</label>
-                                        <input type="text" class="form-control" id="folio" formControlName="folio">
-                                    </div>
-                                    <div class="form-group col-6 col-md-8">
+                                    <div class="form-group col-12">
                                         <label>Motivo</label>
                                         <input type="text" class="form-control" id="motivo" formControlName="motivo">
                                     </div>
