--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -6,8 +6,12 @@
                     <div class="card-body">
                         <div class="m-4">
                             <form (ngSubmit)="login()">
-                                <legend class="text-center">Iniciar sesión</legend>
-                                <hr>
+
+                                <div class="text-center pb-5 text-primary">
+                                    <img width="50px" src="../assets/icons/login.svg">
+                                    <legend class="ml-1 mb-0">Iniciar sesión</legend>
+                                </div>
+                                
                                 <div class="form-group">
                                     <label for="username-email">Correo electrónico</label>
                                     <input type="email" class="form-control" id="email" name="email" [(ngModel)]="credentials.email" required>
