--- a/src/app/pages/historiales-medicos/edit/edit.component.html
+++ b/src/app/pages/historiales-medicos/edit/edit.component.html
@@ -69,6 +69,21 @@
                                             <label>Fecha de nacimiento</label>
                                             <input type="date" class="form-control" id="fechaNacimiento" formControlName="fechaNacimiento">
                                         </div>
+                                        <div class="form-group">
+                                            <label>Peso</label>
+                                            <input type="number" class="form-control" id="peso" formControlName="peso">
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="col-form-label">
+                                                Altura
+                                            </label>
+                                            <div class="input-group mb-3">
+                                                <input type="number" id="talla" class="form-control" formControlName="talla">
+                                                <div class="input-group-append">
+                                                  <span class="input-group-text">m</span>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                     <div class="col-12 col-md-6" [hidden]="historialMedicoForm.get('paciente')?.value === 'Externo'">
                                         <div class="form-group">
