--- a/src/app/pages/historiales-medicos/show/show.component.html
+++ b/src/app/pages/historiales-medicos/show/show.component.html
@@ -80,6 +80,23 @@
           </div>
         </div>
         <app-dependientes *ngIf="historialMedico !== null" [historialMedico]="historialMedico"></app-dependientes>
+        
+        <div class="card">
+          <div class="card-header text-secondary border-0">
+            <h3 class="card-title text-center">Descargar historial médico</h3>
+          </div>
+          <div class="card-body">
+            <div class="input-group input-group-sm my-2">
+              <input type="date" class="form-control form-control-sm" [(ngModel)]="fecha">
+              <div class="input-group-append">
+                <button class="btn btn-secondary" type="button" (click)="buscarYAbrirPDF(historialMedico.id)" [disabled]="!fecha">
+                  <i class="fas fa-search"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
       <div class="col-md-8">
         <div class="card">
